<resources>
    <string name="app_name">Questik</string>
    <string name="home_project">Проекты</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Questik</string>
    <string name="nav_header_subtitle">насчитай себе на мазерати... ну или на геморой</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="project_item">Проекты</string>
    <string name="catalog_item">Каталог</string>
    <string name="chern_item">Черновик</string>
    <string name="manage_item">Настройки</string>
    <string name="communicate_item">Коммуникация с внешим миром</string>
    <string name="share_item">Сохранить</string>
    <string name="send_item">Отправить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_edit">Изменить</string>
    <string name="action_delete">Удалить</string>
    <string name="hello_blank_fragment">Скоро тут будет нечто</string>
    <string name="chat_item">Чатик</string>
    <string name="help_item">Помощь</string>
    <string name="game_item">Time kill</string>
    <string name="doc_item">Оленеводство</string>
    <string name="howto_item">Как не обосраться</string>
    <string name="add_job">Добавить</string>
    <string name="price">Цена</string>
    <string name="name">Наименование</string>
    <string name="menu_project">Проекты</string>
    <string name="menu_catalog">Каталог</string>
    <string name="menu_chern">Черновик</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_game">Игра</string>
    <string name="menu_doc">Документация</string>
    <string name="menu_howto">Помощь</string>
</resources>
