<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.rinet.questik.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_project"
        android:name="ru.rinet.questik.ui.project.ProjectFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="ru.rinet.questik.ui.catalog.CatalogFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_chern"
        android:name="ru.rinet.questik.ui.chern.ChernFragment"
        android:label="@string/menu_chern"
        tools:layout="@layout/fragment_chern" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="ru.rinet.questik.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_manage" />


    <fragment
        android:id="@+id/nav_chat"
        android:name="ru.rinet.questik.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_game"
        android:name="ru.rinet.questik.ui.help.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/nav_doc"
        android:name="ru.rinet.questik.ui.help.FragmentDoc"
        android:label="@string/menu_doc"
        tools:layout="@layout/fragment_doc" />


    <fragment
        android:id="@+id/nav_howto"
        android:name="ru.rinet.questik.ui.help.FragmentHowto"
        android:label="@string/menu_howto"
        tools:layout="@layout/fragment_chat" />

</navigation>